2004-11-15  Jakub Jelinek  <jakub@redhat.com>

	* config.gcc (ia64*-*-linux*): If native and libelf is installed,
	use ia64/t-glibc-no-libunwind instead of the other t-*unwind*
	fragments.
	* config/ia64/t-glibc-no-libunwind: New file.
	* config/ia64/change-symver.c: New file.
	* config/ia64/unwind-ia64.c: If USE_SYMVER_GLOBAL and SHARED,
	define _Unwind_* to __symverglobal_Unwind_*.
	(alias): Undefine.
	(symverglobal): Define.  Use it on _Unwind_*.
	* config/ia64/mkmap-symver-multi.awk: New file.
	* config/ia64/unwind-shared-ia64.c: New file.
	* config/ia64/libgcc-ia64-no-libunwind.ver: New file.

2004-11-14  Andrew Pinski  <pinskia@physics.uc.edu>

	PR objc/18406
	* objc/obj-act.c (encode_type): 96bits doubles are encoded the
	same way as 64bit and 128bit doubles are.

2004-11-14  Hans-Peter Nilsson  <hp@bitrange.com>

	PR target/18347
	* config/mmix/mmix.c (mmix_function_outgoing_value): Handle
	TImode.  Sorry for other non-complex larger-than-64-bit modes.
	* config/mmix/mmix.h (MIN_UNITS_PER_WORD): Do not define.
	(INIT_CUMULATIVE_ARGS): Correct unused macro name FNDECL.

2004-11-13  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/md.texi (constraints) <% modifier>: Mention that it is
	useless when the two alternatives are strictly identical.

2004-11-12  Richard Henderson  <rth@redhat.com>

	PR 17778
	* config/i386/i386.h (TARGET_96_ROUND_53_LONG_DOUBLE): New.
	* config/i386/freebsd.h (SUBTARGET_OVERRIDE_OPTIONS): Remove.
	(TARGET_96_ROUND_53_LONG_DOUBLE): New.
	* config/i386/i386-modes.def (XF): Use it.

2004-11-12  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* config/rs6000/t-rtems (MULTILIB_NEW_EXCEPTIONS_ONLY):
	Remove m505/roe multilib variant.

2004-11-12  Eric Botcazou  <ebotcazou@act-europe.fr>

	Backport from mainline:
	2004-02-25  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_emit_conditional_branch): Don't
	use (op0-op1) == 0 if op0 is a pointer.

2004-11-10  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/18322